SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Allow_To_Select_Grouping_Nodes__c.field-meta.xml
<CustomField>
    <fullName>Allow_To_Select_Grouping_Nodes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, user will allow to select grouping node generated as a result of this tree node configuration.</description>
    <inlineHelpText>If true, user will allow to select grouping node generated as a result of this tree node configuration.</inlineHelpText>
    <label>Allow To Select Grouping Nodes</label>
    <type>Checkbox</type>
</CustomField>