SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Caption__c.field-meta.xml
<CustomField>
    <fullName>Caption__c</fullName>
    <description>Caption - displayed as tree node title</description>
    <inlineHelpText>Caption - displayed as tree node title</inlineHelpText>
    <label>Caption</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>