SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Caption_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Caption_Field_Name__c</fullName>
    <description>Field name to use to retrieve node caption/title. Note that this field will be used as &apos;group by&apos; field for the group by nodes. This field is required for group by and query type of nodes.</description>
    <inlineHelpText>Field name to use to retrieve node caption/title. Note that this field will be used as &apos;group by&apos; field for the group by nodes. This field is required for group by and query type of nodes.</inlineHelpText>
    <label>Caption Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>