SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Child_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Type__c</fullName>
    <description>Object type string of the children objects that will be displayed inside this node</description>
    <inlineHelpText>Object type string of the children objects that will be displayed inside this node</inlineHelpText>
    <label>Child Object Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>