SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Node description</description>
    <inlineHelpText>Add node description here such as this node displays as root node in the File Explorer</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>