SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If disable is checked, this node will not be rendered as one of the node in the tree.</description>
    <inlineHelpText>If disable is checked, this node will not be rendered as one of the node in the tree.</inlineHelpText>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>