SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Group_By_Query_String__c.field-meta.xml
<CustomField>
    <fullName>Group_By_Query_String__c</fullName>
    <description>The query must have the following syntax &quot;Select Count(Id) fieldCount, &lt;GroupByFieldName&gt; fieldValue from &lt;ObjectName&gt; Group By&lt;GroupByFieldName&gt; Order By &lt;FieldName&gt;</description>
    <inlineHelpText>The query must have the following syntax &quot;Select Count(Id) fieldCount, &lt;GroupByFieldName&gt; fieldValue from &lt;ObjectName&gt; Group By&lt;GroupByFieldName&gt; Order By &lt;FieldName&gt;</inlineHelpText>
    <label>Group By Query String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>