SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Order_Children_By__c.field-meta.xml
<CustomField>
    <fullName>Order_Children_By__c</fullName>
    <description>Fields string used to sort the children of a node. It can contain one or more fields along with the order of sort.

field1 =&gt; order by field1 ASC
field1~field2 =&gt; order by field1 ASC, field2 ASC
field1#ASC~field2 =&gt; order by field1 ASC, field2 ASC
field1#DESC~field2 =&gt; order by field1 DESC, field2 ASC
field1~field2#DESC =&gt; order by field1 ASC, field2 DESC
field1#DESC~field2#DESC =&gt; order by field1 DESC, field2 DESC</description>
    <inlineHelpText>Fields used to sort the children of a node. Use ~ as separator when using multiple fields.</inlineHelpText>
    <label>Order Children By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>