SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent tree node in the hierarchy</description>
    <inlineHelpText>Parent tree node in the hierarchy</inlineHelpText>
    <label>Parent</label>
    <referenceTo>Tree_Node_Configuration__c</referenceTo>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>