SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Show_Children_as_tree_nodes__c.field-meta.xml
<CustomField>
    <fullName>Show_Children_as_tree_nodes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked shows children objects as tree nodes.</description>
    <inlineHelpText>If checked shows children objects as tree nodes.</inlineHelpText>
    <label>Show Children as tree nodes</label>
    <type>Checkbox</type>
</CustomField>