SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Sort_Id__c.field-meta.xml
<CustomField>
    <fullName>Sort_Id__c</fullName>
    <description>Sort identifier to sort all nodes in a tree in specific order. By default sort is using sort id followed by name. If user is interested in specific sort order, configure this value such as 001, 002...
The sort id is within the context of parent.</description>
    <label>Sort Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>