SubBt/force-app/main/default/objects/Tree_Node_Configuration__c/fields/Tree_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Tree_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tree where this node is displayed</description>
    <inlineHelpText>Tree where this node is displayed</inlineHelpText>
    <label>Tree Configuration</label>
    <referenceTo>Tree_Configuration__c</referenceTo>
    <relationshipName>Tree_Node_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>